--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
+    <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-552R9J8W");
+    </script>
+    <!-- End Google Tag Manager -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- seo 엔진 최적화 -->
@@ -20,10 +34,10 @@
     <!-- 소셜 미디어에서 공유될 때 사용되는 URL -->
     <meta
       property="og:url"
-      content="https://jimggun.vercel.app/
+      content="https://jgb-umber.vercel.app/
     " />
     <!-- 소셜 미디어에서 페이지가 공유될 때 표시되는 이미지 -->
-    <meta property="og:image" content="https://jimggun.vercel.app/assets/jimggun_logo-DfAxRLDc.png" />
+    <meta property="og:image" content="https://jgb-umber.vercel.app/assets/jimggun_logo-DfAxRLDc.png" />
     <!-- 소셜 미디어에서 페이지가 공유될 때 사용되는 설명 -->
     <meta property="og:description" content="짐꾼 웹사이트입니다." />
     <!-- 파비콘 연결 -->
@@ -33,8 +47,22 @@
     <link rel="apple-touch-icon" sizes="180x180" href="public/images/favicon/apple-touch-icon.png" />
     <link rel="manifest" href="public/images/favicon/site.webmanifest" />
     <title>짐꾼</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z67WWWCVEE"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-Z67WWWCVEE");
+    </script>
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-552R9J8W" height="0" width="0" style="display: none; visibility: hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
